--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "https": "^1.0.0",
+    "mongoose": "^4.13.21",
+    "mongoose-auto-increment": "^5.0.1",
     "nodemon": "^2.0.7",
     "razorpay": "^2.0.7",
     "uuid": "^8.3.2"
