--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +20,7 @@
     "https": "^1.0.0",
     "mongoose": "^4.13.21",
     "mongoose-auto-increment": "^5.0.1",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.22",
     "razorpay": "^2.0.7",
     "uuid": "^8.3.2"
   }
